# Products.SQLAlchemyDA

./: .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  __init__.py  bootstrap.py  buildout.cfg  buildout4.cfg  da.py  pyproject.toml  setup.cfg  setup.py  tox.ini  version.txt
.github/workflows/: tests.yml
Products/SQLAlchemyDA/: CHANGES.txt  LICENSE.txt  README.txt  __init__.py  da.py  version.txt
Products/SQLAlchemyDA/pt/: addSAWrapperForm.zpt  info.zpt  query.zpt
Products/SQLAlchemyDA/tests/: testSQLAlchemyDA.py  test_SQLAlchemyDA.py
pt/: addSAWrapperForm.zpt  info.zpt  query.zpt
src/Products/SQLAlchemyDA/: __init__.py  da.py
src/Products/SQLAlchemyDA/pt/: addSAWrapperForm.zpt
src/Products/SQLAlchemyDA/tests/: test_SQLAlchemyDA.py
tests/: test_SQLAlchemyDA.py
trunk/: setup.py
trunk/Products/SQLAlchemyDA/: config.py  header.txt
